<resources>
    <string name="app_name">android_project</string>
    <string name="register_txt">Register</string>
    <string name="login_txt">Login</string>
    <string name="name_txt">Name</string>
    <string name="email_txt">Email</string>
    <string name="phone_txt">Phone Number</string>
    <string name="password_txt">Password</string>
    <string name="create_account_txt">Create Account</string>
    <string name="account_txt">Already Account ?</string>
    <string name="forget_txt">Forget Password ?</string>
    <string name="login_with_txt">or Login with</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
