<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:paddingRight="24dp"
    android:paddingLeft="24dp"
    android:layout_height="match_parent">
    
    <ImageView
        android:id="@+id/logoID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/icon"
        android:layout_width="80dp"
        android:layout_height="80dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/logoID"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_txt"
            android:textSize="25sp"
            android:textAllCaps="true"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorLightgray" />
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/name_txt"-->
            <!--android:textSize="14sp"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:textColor="@color/colorPrimaryDark" />-->
        <EditText
            android:id="@+id/name_register_txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:hint="Name...."/>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/email_txt"-->
            <!--android:textSize="14sp"-->
            <!--android:textColor="@color/colorPrimaryDark" />-->
        <EditText
            android:id="@+id/email_register_txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:hint="Email...."/>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/password_txt"-->
            <!--android:textSize="14sp"-->
            <!--android:textColor="@color/colorPrimaryDark" />-->
        <EditText
            android:id="@+id/password_register_txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:hint="password...."/>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/phone_txt"-->
            <!--android:textSize="14sp"-->
            <!--android:textColor="@color/colorPrimaryDark" />-->
        <EditText
            android:id="@+id/phone_register_txtID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:hint="Phone Number...."/>

        <Button
            android:id="@+id/create_account_btnID"
            android:layout_width="220dp"
            android:textStyle="normal"
            android:background="@color/colorSecond"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:text="@string/create_account_txt"
            android:layout_height="55dp" />

        <TextView
            android:id="@+id/login_txtID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_txt"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:textColor="@color/colorSecond" />



    </LinearLayout>


    
    

</RelativeLayout>